--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "formidable": "^1.2.1",
     "pkgcloud": "^2.1.1",
     "strong-globalize": "^4.1.1",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
